Avoid rendering the scrollbar when switching between views

--- a/app/src/popup/Popup.css
+++ b/app/src/popup/Popup.css
@@ -1,3 +1,7 @@
+html, body {
+  scrollbar-width: none;
+  overflow: hidden;
+}
 .popup-view {
   border: 2px solid #00e080;
   background-image: linear-gradient(0.35turn, #E0E0E0, transparent);
